--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "task2",
+  "name": "redency-additional-task2",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://1sosed9.github.io/radency-tasks/",
+  "homepage": "",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,12 +12,15 @@
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.17",
     "@types/react-redux": "^7.1.25",
+    "autoprefixer": "^10.4.14",
     "gh-pages": "^5.0.0",
+    "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -49,5 +52,16 @@
   },
   "devDependencies": {
     "@types/react-dom": "^18.2.7"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/1sosed9/redency-additional-task2.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/1sosed9/redency-additional-task2/issues"
   }
 }
